Fix layout and Sizes
Fix layout that causing uneven divs and font sizes
Add required attribute for security validation

Author: Roland 2025-11-6 8:49 pm

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .main-wrapper {
   display: flex;
   flex-direction: row;
@@ -23,21 +27,21 @@ img {
   align-items: center;
   justify-content: center;
   width: 33%;
-  height: 16%;
+  height: 120px;
   position: absolute;
-  top: 25%;
+  top: 20%;
   background-color: rgba(0, 0, 0, 0.734);
   padding: 5px;
 }
 
 .logo-img {
-  width: auto;
+  width: 70px;
+  height: auto;
 }
 
 .logo-wrapper > p {
   font-family: "Savate", sans-serif;
-  font-size: 18rem;
-  font-optical-sizing: auto;
+  font-size: 3rem;
   font-weight: bold;
   font-style: normal;
   color: white;
@@ -47,7 +51,7 @@ img {
   position: absolute;
   bottom: 2%;
   left: 10%;
-  font-size: 3rem;
+  font-size: 9px;
   color: white;
 }
 
@@ -56,7 +60,7 @@ img {
 }
 
 .link:visited {
-  color: red;
+  color: white;
 }
 
 .link:hover {
@@ -65,6 +69,85 @@ img {
 
 .form-wrapper {
   width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 40px;
+}
+
+.para-wrapper {
+  margin: 0 0 4px 50px;
+}
+
+.para-wrapper > p {
+  font-size: 1.3rem;
+  font-weight: 500;
+}
+
+form {
+  width: 100%;
+  height: 35%;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  box-shadow: 0 4px 3px 0 rgba(180, 180, 180, 0.664);
+}
+
+fieldset {
+  width: 50%;
+  height: 90%;
+  margin: 0 0 0 50px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  border: none;
+}
+
+legend {
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-bottom: 30px;
+}
+
+.box {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  height: 50px;
+}
+
+label {
+  font-size: 0.8rem;
+  margin-bottom: 3px;
+}
+
+input {
+  width: 80%;
   height: 70%;
-  border-bottom: 1px solid black;
+  border-radius: 6px;
+  border: 1px solid #e5e7eb;
+}
+
+button {
+  width: 15%;
+  height: 4%;
+  font-size: 1rem;
+  padding: 4px;
+  border-radius: 6px;
+  background-color: #596d48;
+  border: none;
+  color: white;
+  margin-left: 50px;
+  cursor: pointer;
+}
+
+.login-paragraph {
+  margin: -20px 0 0 50px;
+  font-size: 0.8rem;
+  font-weight: 500;
+}
+.login-link {
+  color: #596d48;
+  text-decoration: none;
 }
